--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "Promise"
   ],
   "scripts": {
-    "build": "rollup -c",
+    "build": "npm run buildLibrary && npm run buildApp",
+    "buildApp": "webpack",
+    "buildLibrary": "rollup -c",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path .gitignore ./src/",
     "release": "./scripts/release.sh",
+    "start": "webpack-dev-server -d --history-api-fallback --open --hot --inline --progress --colors --port 3000",
     "test": "mocha 'src/**/*.spec.js'",
     "testCoverage": "istanbul cover _mocha -- 'src/**/*.spec.js'",
     "testE2E": "mocha 'src/**/*.e2e.js'",
@@ -36,6 +39,7 @@
     "babel-cli": "^6.10.1",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.3",
     "babel-plugin-lodash": "^3.2.2",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
@@ -53,6 +57,7 @@
     "eslint": "^3.1.0",
     "eslint-config-semistandard": "^6.0.2",
     "eslint-config-standard": "^5.3.5",
+    "eslint-config-standard-react": "^3.0.0",
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-react": "^5.1.1",
     "eslint-plugin-standard": "^2.0.0",
@@ -70,9 +75,14 @@
     "postcss-loader": "^0.8.1",
     "react-addons-test-utils": "^15.3.0",
     "react-hot-loader": "^1.3.0",
-    "rucksack-css": "^0.8.5",
     "rollup": "^0.34.1",
     "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-commonjs": "^3.3.1",
+    "rollup-plugin-node-globals": "^1.0.6",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-uglify": "^1.0.1",
+    "rucksack-css": "^0.8.5",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
