--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["semistandard"],
+  "extends": ["semistandard", "standard-react"],
   "parser": "babel-eslint",
   "env": {
     "mocha": true,
@@ -7,5 +7,8 @@
   },
   "globals": {
     "expect": true
+  },
+  "rules": {
+    "object-curly-spacing": ["error", "always"]
   }
 }
