--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,10 @@
     "expect": true
   },
   "rules": {
-    "object-curly-spacing": ["error", "always"]
+    "object-curly-spacing": ["error", "always"],
+    "no-debugger": "error",
+    "no-alert": "error",
+    "jsx-quotes": ["error", "prefer-single"],
+    "react/jsx-curly-spacing": ["error", "always"]
   }
 }
