--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "6.9.0",
     "babel-runtime": "^6.9.2",
+    "bourbon": "^4.2.7",
+    "bourbon-neat": "^1.8.0",
     "chai": "^3.5.0",
     "chai-enzyme": "0.4.2",
     "cheerio": "0.20.0",
@@ -61,6 +63,7 @@
     "eslint-plugin-promise": "^2.0.0",
     "eslint-plugin-react": "^5.1.1",
     "eslint-plugin-standard": "^2.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "history": "^3.0.0",
     "ignore-styles": "2.0.0",
@@ -72,6 +75,9 @@
     "mock-local-storage": "1.0.2",
     "mock-socket": "^3.0.1",
     "nock": "^8.0.0",
+    "node-bourbon": "^4.2.8",
+    "node-neat": "^1.7.2",
+    "node-sass": "^3.8.0",
     "postcss-loader": "^0.8.1",
     "react-addons-test-utils": "^15.3.0",
     "react-hot-loader": "^1.3.0",
@@ -83,6 +89,7 @@
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^1.0.1",
     "rucksack-css": "^0.8.5",
+    "sass-loader": "^4.0.0",
     "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.0",
